update code to work with Intellij 2020.3